--- a/ProfileBot/ProfileBot.csproj
+++ b/ProfileBot/ProfileBot.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AdaptiveCards" Version="3.1.0" />
+    <PackageReference Include="Azure.AI.Language.Conversations" Version="1.1.0" />
     <PackageReference Include="Azure.AI.Language.QuestionAnswering" Version="1.1.0" />
     <PackageReference Include="Azure.Data.Tables" Version="12.9.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1" />
