--- a/ProfileBot/ProfileBot.csproj
+++ b/ProfileBot/ProfileBot.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Clu\**" />
+    <Content Remove="Clu\**" />
+    <EmbeddedResource Remove="Clu\**" />
+    <None Remove="Clu\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AdaptiveCards" Version="3.1.0" />
     <PackageReference Include="Azure.AI.Language.Conversations" Version="1.1.0" />
     <PackageReference Include="Azure.AI.Language.QuestionAnswering" Version="1.1.0" />
